# tailor-trailers

./: .gitignore  README.md  app.py  main.py  main2.py  pyproject.toml  transcript.txt
tools/: video_tools.py
