[tool.poetry]
name = "auto-feat"
version = "0.1.0"
description = ""
authors = ["ranveer0323 <ranawatranveer0323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.67.1"
langchain = "0.2.16"
langchain-groq = "0.1.9"
groq = "^0.11.0"
crewai-tools = "^0.12.1"
streamlit = "^1.39.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
